<Debug>: Fix lại các logic trong kết nối database và corelogic